--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -84,5 +84,7 @@
   body {
     background-color: hsl(var(--background));
     color: hsl(var(--foreground));
+    overflow-x: hidden;
+    line-height: 1.6;
   }
 }
